--- a/src/main/resources/static/templates/pages/runs/dashboard.html
+++ b/src/main/resources/static/templates/pages/runs/dashboard.html
@@ -2,10 +2,10 @@
     <!--<div class="panel panel-default donut">
         <div class="panel-heading">Lints repartition</div>-->
         <!--<nvd3 id="donutChart" options='donutOptions' data='donutData'></nvd3>-->
-    <canvas id="doughnut" class="chart chart-doughnut"
-            chart-data="donutData"
-            chart-labels="donutLabels">
-    </canvas>
+    <!--<canvas id="doughnut" class="chart chart-doughnut"-->
+            <!--chart-data="donutData"-->
+            <!--chart-labels="donutLabels">-->
+    <!--</canvas>-->
 
     <!-- </div> -->
     <!--<div>-->
@@ -23,10 +23,12 @@
         <div class="panel-body">
             <div class="panel panel-default barChart">-->
     <canvas id="barChart" class="chart chart-bar"
+            legend="true"
             chart-data="barChartData"
             chart-labels="barChartLabels"
             chart-options="barChartOption"
-            chart-series="barChartSeries"></canvas>
+            chart-series="barChartSeries"
+            chart-colors="barChartColors"></canvas>
             <!--</div>
         </div>
     </div>-->
