--- a/src/main/resources/static/templates/pages/runs/dashboard.html
+++ b/src/main/resources/static/templates/pages/runs/dashboard.html
@@ -1,27 +1,17 @@
-<div class="col-lg-6 col-sm-6">
-    <!--<div class="panel panel-default donut">
-        <div class="panel-heading">Lints repartition</div>-->
-        <!--<nvd3 id="donutChart" options='donutOptions' data='donutData'></nvd3>-->
-    <!--<canvas id="doughnut" class="chart chart-doughnut"-->
-            <!--chart-data="donutData"-->
-            <!--chart-labels="donutLabels">-->
-    <!--</canvas>-->
+<!--<div class="col-lg-6 col-sm-6">-->
+<!--<div style="height: 450px;width: 50%;margin-top:20px">-->
+<!---->
+<!--<canvas id="donutChart" class="chart chart-doughnut"-->
+<!--chart-data="donutData"-->
+<!--chart-labels="donutLabels"-->
+<!--chart-colors="donutColors"-->
+<!--chart-options="donutOptions">-->
+<!--</canvas>-->
+<!---->
+<!--</div>-->
+<!--<div class="col-lg-6 col-sm-6">-->
+<div style="height: 600px;width: 50%;margin-top:40px;margin-left:auto;margin-right:auto;">
 
-    <!-- </div> -->
-    <!--<div>-->
-        <!--<pvtl-d3-treemap width="850" height="850" data="treemapData" value="population">-->
-            <!--<div>-->
-                <!--<p>{{propertyName}}</p>-->
-            <!--</div>-->
-        <!--</pvtl-d3-treemap>-->
-    <!--</div>-->
-    <!-- /.panel-body -->
-</div>
-<div class="col-lg-6 col-sm-6">
-    <!--<div class="panel panel-default">
-        <div class="panel-heading">Stacked Bar Chart</div>
-        <div class="panel-body">
-            <div class="panel panel-default barChart">-->
     <canvas id="barChart" class="chart chart-bar"
             legend="true"
             chart-data="barChartData"
@@ -29,8 +19,4 @@
             chart-options="barChartOption"
             chart-series="barChartSeries"
             chart-colors="barChartColors"></canvas>
-            <!--</div>
-        </div>
-    </div>-->
-
 </div>
