--- a/src/main/resources/static/templates/pages/runs/index.html
+++ b/src/main/resources/static/templates/pages/runs/index.html
@@ -11,7 +11,7 @@
         <div class="col-md-12">
             <!-- /.panel-heading -->
             <div class="panel-body">
-                <div class="list-group runList" >
+                <div id="runs" class="list-group runList" >
                     <div class="list-group-item" ng-class="{'rowSuccess' : run.status == 'SUCCESS',
                                         'rowFailure' : run.status == 'FAILURE',
                                         'rowRunning' : run.status == 'RUNNING'}" ng-repeat="run in runs">
